--- a/application/views/form_over.html
+++ b/application/views/form_over.html
@@ -67,7 +67,7 @@
                         <!--Action Button Beg-->
                         <div class="col-lg-7">
                             <input id="formId" hidden="hidden"/>
-                            <button class="btn btn-primary" id="ReUpld" onclick="ChangeSta(StaChange+'/ReUpld/over','over')">重新提交</button>
+                            <!-- <button class="btn btn-primary" id="ReUpld" onclick="ChangeSta(StaChange+'/ReUpld/over','over')">重新提交</button> -->
                             <button class="btn btn-primary" id="printOut" href="#" >浏览</button>
                         </div>
                         <!--Action Button End-->
