--- a/application/views/pageFoot.html
+++ b/application/views/pageFoot.html
@@ -2,7 +2,12 @@
     <div class="footer-inner">
         <div class="footer-content">
             <span class="bigger-120">
-                <span class="blue bolder">ZS</span> &copy;TX DT-KIM
+                <span class="blue bolder summary pull-left col-xs-offset-5">ZS</span>
+            	<span class="summary pull-left">&copy;TX DT-KIM</span></br>
+                <span class="blue bolder summary pull-left col-xs-offset-3">联系电话：</span>
+            	<span class="summary pull-left">0760-88725315 8872565</span>
+            	<span class="blue bolder summary pull-left col-xs-offset-1">联系地址：</span>
+            	<span class="summary pull-left">广东省中山市富康路10号2楼</span>
             </span>
         </div>
     </div>
