--- a/application/views/form_attr.html
+++ b/application/views/form_attr.html
@@ -95,6 +95,28 @@
                 </div>
                 
                 <div id="home2" class="tab-pane">
+                    <div>
+                        <button class="btn btn-success" id="id-btn-dialog">修改工作流</button>
+                        <br /><br />
+                        <ul class="steps">
+                            <li data-step="1" class="active" href="#modal-table" role="button" data-toggle="modal">
+                                <span class="step">1</span>
+                                <span class="title">工作流</span>
+                            </li>
+                            <li data-step="2">
+                                <span class="step">2</span>
+                                <span class="title">工作流</span>
+                            </li>
+                            <li data-step="3">
+                                <span class="step">3</span>
+                                <span class="title">工作流</span>
+                            </li>
+                            <li data-step="4">
+                                <span class="step">4</span>
+                                <span class="title">工作流</span>
+                            </li>
+                        </ul>
+                    </div>
                     <ul class="steps"></ul>
                     <br /><br />
                     <!--<div class="profile-user-info profile-user-info-striped">
